--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
+  justify-content:space-between;
+  margin: 10px;
+  border: 1px solid black;
+  background-color:#32a6a8;
+  border-radius: 7px;
+}
+
+.nav-items>ul{
+  list-style-type:none;
+  display: flex;
+}
+
+.nav-items >ul >li {
+  padding: 10px;
+}
+
+.logo{
+    width: 75px;
+    border-radius: 17px;
+    margin: 3px;
+}
+
+.Card{
+  width: 200px;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 7px;
+  background-color: #99c2ff;
+}
+
+
+.Card > img{
+  width: 100%;
+}
+
+.body{
+  display: flex;
+ flex-wrap: wrap;
+ justify-content: space-evenly;
+  
+}
+
+.cardimg{
+  border-radius: 10px;
+
+}
+
+
+/* seach bar css */
+
+.search-input{
+ border: 1.5px solid black;
+ border-radius: 7px;
+ width: 30%;
+
+}
+
+.srchbtn{
+    border-radius: 5px;
+    border-style: none;
+    margin: 10px;
+}
+.srchbtn:hover{
+    border-radius: 5px;
+    border-style: none;
+    margin: 10px;
+    background-color: wheat;
+    cursor: pointer;
+}
+
+
+ /* loading page css */
+.loading-div{
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  min-width: 100vw;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+}
+/* .loader {
+  width: 8px;
+  height: 8px;
+  position: relative;
+  border-radius: 50%;
+  background: #ff0000;
+  animation: wave 1s ease-in infinite;
+  z-index: 1000;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes wave {
+ 0% {  box-shadow:
+  0 0 0 0px rgba(255, 255,255, 1),
+  0 0 0 20px rgba(255, 255,255, 0.2),
+  0 0 0 40px rgba(255, 255,255, 0.6),
+  0 0 0 60px rgba(255, 255,255, 0.4),
+  0 0 0 80px rgba(255, 255,255, 0.2)
+  }
+  100% {  box-shadow:
+    0 0 0 80px rgba(255, 255,255, 0),
+    0 0 0 60px rgba(255, 255,255, 0.2),
+    0 0 0 40px rgba(255, 255,255, 0.4),
+    0 0 0 20px rgba(255, 255,255, 0.6),
+    0 0 0 0px rgba(255, 255,255, 1)
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+   */
